Add Phase 7 temporal-envelope regression matrix